--- a/ae1Environment/web-ui/src/main/webapp/index.html
+++ b/ae1Environment/web-ui/src/main/webapp/index.html
@@ -3,8 +3,54 @@
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <!<!-- CSS for bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <!<!-- the main content on the page -->
+        <div class ="container-fluid bg-dark">
+        <!<!-- header -->
+            <div class ="container-fluid bg-light text-center">
+                <h1>Welcome to the Homepage!</h1>
+            </div> 
+            <div class = "container bg-light">
+                <div class="row justify-content-centre align-items-center">
+                    <p>This is the main page where you can do the following tasks:</p>
+                        <ul>
+                            <li>Login</li>
+                            <li>Create a new transaction</li>
+                            <li>Refund a transaction</li>
+                        </ul>
+                </div>
+                <!<!-- buttons for interaction -->
+                <div class="row justify-content-around align-items-center">
+                    <button type="button" class="btn btn-dark col-sm-2">Admin Login</button>
+                    <button class="btn btn-dark col-sm-2" type="button" data-toggle="collapse" data-target="#pinpad" aria-expanded="false" aria-controls="pinpad">New Transaction</button>
+                    <button type="button" class="btn btn-dark col-sm-2">Refund Transaction</button>
+                </div>
+                <!<!-- hidden pinpad -->
+                <div class="collapse" id="pinpad"> 
+                    <input type="password">
+                        <div id="numpad" class="row justify-content-centre align-items-center">
+                            <div class="key">1</div>
+                            <div class="key">2</div>
+                            <div class="key">3</div><br>
+                            <div class="key">4</div>
+                            <div class="key">5</div>
+                            <div class="key">6</div><br>
+                            <div class="key">7</div>
+                            <div class="key">8</div>
+                            <div class="key">9 </div><br>
+                            <div class="key">X</div>
+                            <div class="key">0</div>
+                            <div class="key">O</div>
+                        </div>
+                </div>
+            </div>
+        </div>
+        
+        <!<!-- Javascript to bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     </body>
 </html>
