--- a/ae1Environment/web-ui/src/main/webapp/index.html
+++ b/ae1Environment/web-ui/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start Page</title>
+        <title>Credit Card Application</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!<!-- CSS for bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -14,7 +14,7 @@
                 <h1>Welcome to the Homepage!</h1>
             </div> 
             <div class = "container bg-light">
-                <div class="row justify-content-centre align-items-center">
+                <div class="col justify-content-centre align-items-center">
                     <p>This is the main page where you can do the following tasks:</p>
                         <ul>
                             <li>Login</li>
@@ -25,27 +25,54 @@
                 <!<!-- buttons for interaction -->
                 <div class="row justify-content-around align-items-center">
                     <button type="button" class="btn btn-dark col-sm-2">Admin Login</button>
-                    <button class="btn btn-dark col-sm-2" type="button" data-toggle="collapse" data-target="#pinpad" aria-expanded="false" aria-controls="pinpad">New Transaction</button>
+                    <button href="#creditcarddetails" type="button" class="btn btn-dark col-sm-2" data-toggle="collapse">New Transaction</button>
                     <button type="button" class="btn btn-dark col-sm-2">Refund Transaction</button>
+                    <p></p>
                 </div>
-                <!<!-- hidden pinpad -->
-                <div class="collapse" id="pinpad"> 
-                    <input type="password">
-                        <div id="numpad" class="row justify-content-centre align-items-center">
-                            <div class="key">1</div>
-                            <div class="key">2</div>
-                            <div class="key">3</div><br>
-                            <div class="key">4</div>
-                            <div class="key">5</div>
-                            <div class="key">6</div><br>
-                            <div class="key">7</div>
-                            <div class="key">8</div>
-                            <div class="key">9 </div><br>
-                            <div class="key">X</div>
-                            <div class="key">0</div>
-                            <div class="key">O</div>
+                
+                <!<!-- hidden card details -->
+                <form class = ""action="" id="creditcarddetails">
+                    <div class="d-flex align-items-centre flex-column col-sm-3">
+                        <label for="card-name">Name on card:</label><br>
+                        <input type="text" id="nameOnCard" name="nameOnCard"><br>
+                        <label for="expirydate">Expiry Date:</label><br>
+                        <input type="month" id="expirydate" name="expirydate"><br>
+                        <label for="cvv">CVV</label><br>
+                        <input type="number" id="cvv" name="cvv">
+                    </div>
+                    <div class="ml-4 justify-content-centre" id="pinpad"> 
+                        <div class="col-12 d-flex justify-content-center">
+                            <input type="text" class="text-center" id="cardnumber">
                         </div>
-                </div>
+                        <div id="numpad" class=" d-flex justify-content-center row align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn" onclick="document.getElementById('cardnumber').value=document.getElementById('cardnumber').value + '1';">1</button>
+                                <button type="button" class="btn" onclick="document.getElementById('cardnumber').value=document.getElementById('cardnumber').value + '2';">2</button>
+                                <button type="button" class="btn" onclick="document.getElementById('cardnumber').value=document.getElementById('cardnumber').value + '3';">3</button>
+                            </div>
+                            <div class="btn-group">
+                                <button type="button" class="btn" onclick="document.getElementById('cardnumber').value=document.getElementById('cardnumber').value + '4';">4</button>
+                                <button type="button" class="btn" onclick="document.getElementById('cardnumber').value=document.getElementById('cardnumber').value + '5';">5</button>
+                                <button type="button" class="btn" onclick="document.getElementById('cardnumber').value=document.getElementById('cardnumber').value + '6';">6</button><br>
+                            </div>
+                            <div class="btn-group">
+                                <button type="button" class="btn" onclick="document.getElementById('cardnumber').value=document.getElementById('cardnumber').value + '7';">7 </button>
+                                <button type="button" class="btn" onclick="document.getElementById('cardnumber').value=document.getElementById('cardnumber').value + '8';">8</button>
+                                <button type="button" class="btn" onclick="document.getElementById('cardnumber').value=document.getElementById('cardnumber').value + '9';">9</button><br>
+                            </div>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-warning" class="btn btn-outline-secondary py-3" onclick="document.getElementById('cardnumber').value=document.getElementById('cardnumber').value.slice(0, -1);">&lt;</button>
+                                <button type="button" class="btn" onclick="document.getElementById('cardnumber').value=document.getElementById('cardnumber').value + '0';">0</button>
+                                <button type="button" class="btn btn-danger" onclick="">X</button><br>
+                            </div>
+                            <button type="submit" class="btn btn-success col-12 d-flex justify-content-center" value="submit">Enter</button>
+                        </div>
+                        <button class="btn btn-secondry">
+                            <span class="spinner-border spinner-border-sm"></span>
+                            Waiting for confirmation....
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
         
