--- a/ae1Environment/web-ui/src/main/webapp/refundpage.html
+++ b/ae1Environment/web-ui/src/main/webapp/refundpage.html
@@ -5,7 +5,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 -->
 <html>
     <head>
-        <title>Refund</title>
+        <title>crEDIT card Application - Refund</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!<!-- CSS for bootstrap -->
