deleted html files and replaced with jsp - edited go back function on page

--- a/ae1Environment/web-ui/src/main/webapp/index.html
+++ b/ae1Environment/web-ui/src/main/webapp/index.html
@@ -11,18 +11,12 @@
         <div class ="container-fluid bg-dark">
         <!<!-- header -->
             <div class ="container-fluid bg-light text-center">
-                <h1>Log in</h1>
+                <h1>Redirection</h1>
             </div> 
             <div class = "container bg-light">
                 <div class="row justify-content-centre align-items-center">
-                    <p>Welcome to the login page</p>
-                    <form id="login">
-                        <label for="name">username</label>
-                        <input type="text" placeholder="enter username" name="name" required>
-                        <label>password</label>
-                        <input type="text" placeholder="enter password" name="password" required>
-                        <button type="submit">Login</button>
-                    </form>
+                    <p>Click here to be redirected to the main application:</p>
+                    <a href="home.jsp">Here</a>
                 </div>
             </div>
         </div>
